--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+BarAggregator_LivePull_Guide.md
 
 # Installer logs
 pip-log.txt
